update all tool for build

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <head>
     <meta http-equiv="content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Kids Life- Home</title>
+    <title>Freyrus - </title>
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link href="ss/style.min.css" rel="stylesheet" type="text/css">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="build/css/style.min.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+    <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 
 <body class="main">
@@ -44,7 +46,7 @@
     <!--wrapper ends-->
     <a href="" title="Go to Top" class="back-to-top">To Top ↑</a>
     <!--Java Scripts-->
-    <script type="text/javascript" src="js/min.js"></script>
+    <script type="text/javascript" src="build/js/freyrus.min.js"></script>
     <!--Java Scripts ends-->
 </body>
 
