--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--wrapper starts-->
     <div class="wrapper">
         <!--header starts-->
-        <header>
+        <header id="wrapper-header-top">
             <div class="top-nav">
                 <div class="container">
                     <span class="top-nav__contact-left"></span>
@@ -40,13 +40,15 @@
                 </div>
             </div>
             <div class="container">
-                <a href="#home" class="header__logo"><img src="images/logo.png" alt=""></a>
+                <a href="#home" class="header__logo">
+                    <img src="images/logo.png" alt="">
+                </a>
                 <div class="header__menu">
-                	<a class="header__menu-item" href="#home">HOME</a>
-                	<a class="header__menu-item" href="#we-can-help">WE CAN HELP </a>
-                	<a class="header__menu-item" href="#what-we-do">WHAT WE DO</a>
-                	<a class="header__menu-item" href="#who-we-are"> WHO WE ARE</a>
-                	<a class="header__menu-item" href="#get-in-touch">GET IN TOUCH</a>
+                    <a class="header__menu-item" href="#home">HOME</a>
+                    <a class="header__menu-item" href="#we-can-help">WE CAN HELP </a>
+                    <a class="header__menu-item" href="#what-we-do">WHAT WE DO</a>
+                    <a class="header__menu-item" href="#who-we-are"> WHO WE ARE</a>
+                    <a class="header__menu-item" href="#get-in-touch">GET IN TOUCH</a>
                 </div>
             </div>
         </header>
@@ -54,21 +56,58 @@
         <!--main starts-->
         <div id="main">
             <div id="fullpage" class="pages">
-                <div class="section active pages__home">
-                	<div class="pages_hone-slogan_bg"></div>
-                	<div class="pages_hone-slogan_content">
-                		 <div class="container">
-                		 		<h1>We, Professional Developers</h1>
-                		 		<span class="hr"></span>
-                		 		<h3>We are focused on creating products and services that people want to use</h3>
-                		 		<a href="#we-can-help">Scroll to learn a little more about us</a>
-                		 </div>
+                <section class="section active pages__home">
+                    <div class="pages_hone-slogan_bg animated fadeInDown"></div>
+                    <div class="pages_hone-slogan_content animated fadeInDown">
+                        <div class="container">
+                            <h1>We, Professional Developers</h1>
+                            <span class="hr"></span>
+                            <h3>We are focused on creating products and services that people want to use</h3>
+                            <a href="#we-can-help">Scroll to learn a little more about us</a>
+                        </div>
+                    </div>
+                    <a class="scroll-down" href="#we-can-help">&nbsp</a>
+                </section>
+                <section class="section pages__we_can_help">
+                    <div class="container">
+                        <div class="row">
+                            <h2>What Can We Do For You</h2>
+                            <p>Mobile and e-commerce are more than a necessity, they're your life force, your heart. And although we are a full-service web development and design agency, our focus is allheart. Increase traffic and engagement and accelerate sales with Cofa Media.</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <a href="#" class="e-commerce">
+                                    <h3>E-Commerce</h3>
+                                </a>
+                                <p>We all know and love the quote from Field of Dreams: "Build it and they will come." But to believe it is true is simply impossible. E-Commerce sites sell stuff. But they won’t sell themselves. An e-commerce site is your business’ foundation. Don’t let your customers down with a complicated, hard-to-use site that doesn’t look appealing. Build a site that reflects your business goals and keeps customers happy.</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <a href="#" class="mobile-web">
+                                    <h3>Mobile Web</h3>
+                                </a>
+                                <p>Mobile web browsing is not just a trend; it has actually become a necessity. With the convenience of surfing the web from a mobile device, it is becoming a necessity to have a mobile site for your business. So if you haven’t yet set up your own mobile site, we will create a mobile version of your site for your iPhone or Droid, the 2 most commonly used platforms - sorry Blackberry.</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <a href="#" class="hire-a-team">
+                                    <h3>Hire a Team</h3>
+                                </a>
+                                <p>We all know how difficult a web development project really is. In order to avoid scope creep, uncontrolled change requests and project growth, we recommend hiring a small team. Whether it's one developer or a mini team, we can provide the right solution for you.</p>
+                            </div>
+                        </div>
+                        <!-- /.row -->
+                    </div>
+                </section>
+                <section class="section pages__what_we_do">
+                	<div class="pages__what_we_do_header-title">
+                		<h2>WHAT WE DO</h2>
+                		<p>Let see what We have build, then make your ideas come true and hire we</p>
                 	</div>
-                </div>
-                <div class="section pages__we_can_help">we can help</div>
-                <div class="section pages__what_we_do">what we do</div>
-                <div class="section pages__who_we_are">who we are</div>
-                <div class="section pages__get_in_touch">get in touch
+                	<div class="pages__what_we_do_bottom-title">
+                		
+                	</div>
+                </section>
+                <section class="section pages__who_we_are">who we are</section>
+                <section class="section pages__get_in_touch">get in touch
                     <!--footer starts-->
                     <footer>
                         <!--footer-widgets-wrapper starts-->
@@ -78,7 +117,7 @@
                         </div>
                     </footer>
                     <!--footer ends-->
-                </div>
+                </section>
             </div>
         </div>
         <!--main ends-->
