--- a/index.html
+++ b/index.html
@@ -72,27 +72,40 @@
                     <div class="container">
                         <div class="row">
                             <h2>What Can We Do For You</h2>
-                            <p>Mobile and e-commerce are more than a necessity, they're your life force, your heart. And although we are a full-service web development and design agency, our focus is allheart. Increase traffic and engagement and accelerate sales with Cofa Media.</p>
+                            <p>Mobile and e-commerce are more than a necessity, they're your life force, your heart. And although we are a full-service web development and design agency, our focus is allheart. Increase traffic and engagement and accelerate sales with Freyrus.</p>
                         </div>
                         <div class="row">
                             <div class="col-lg-4">
-                                <a href="#" class="e-commerce">
+                                <a href="#" class="main-help e-commerce">
                                     <h3>E-Commerce</h3>
                                 </a>
                                 <p>We all know and love the quote from Field of Dreams: "Build it and they will come." But to believe it is true is simply impossible. E-Commerce sites sell stuff. But they won’t sell themselves. An e-commerce site is your business’ foundation. Don’t let your customers down with a complicated, hard-to-use site that doesn’t look appealing. Build a site that reflects your business goals and keeps customers happy.</p>
                             </div>
                             <div class="col-lg-4">
-                                <a href="#" class="mobile-web">
+                                <a href="#" class="main-help mobile-web">
                                     <h3>Mobile Web</h3>
                                 </a>
                                 <p>Mobile web browsing is not just a trend; it has actually become a necessity. With the convenience of surfing the web from a mobile device, it is becoming a necessity to have a mobile site for your business. So if you haven’t yet set up your own mobile site, we will create a mobile version of your site for your iPhone or Droid, the 2 most commonly used platforms - sorry Blackberry.</p>
                             </div>
                             <div class="col-lg-4">
-                                <a href="#" class="hire-a-team">
+                                <a href="#" class="main-help hire-a-team">
                                     <h3>Hire a Team</h3>
                                 </a>
                                 <p>We all know how difficult a web development project really is. In order to avoid scope creep, uncontrolled change requests and project growth, we recommend hiring a small team. Whether it's one developer or a mini team, we can provide the right solution for you.</p>
                             </div>
+                        </div>
+                        <!-- /.row -->
+                        <div class="row">
+                            <ul class="product-list">
+                                <li><span class="html5">html5</span></li>
+                                <li><span class="jquery">jQuery</span></li>
+                                <li><span class="email">email temaplate</span></li>
+                                <li><span class="wp">wp</span></li>
+                                <li><span class="drupal">drupal</span></li>
+                                <li><span class="joomla">joomla</span></li>
+                                <li><span class="magento">magento</span></li>
+                                <li><span class="shopify">shopify</span></li>
+                            </ul>
                         </div>
                         <!-- /.row -->
                     </div>
