--- a/index.html
+++ b/index.html
@@ -120,16 +120,25 @@
                 	</div>
                 </section>
                 <section class="section pages__who_we_are">who we are</section>
-                <section class="section pages__get_in_touch">get in touch
-                    <!--footer starts-->
-                    <footer>
-                        <!--footer-widgets-wrapper starts-->
-                        <div class="footer-widgets-wrapper">
-                            <!--container starts-->
-                            <div class="container"></div>
+                <section class="section pages__get_in_touch">
+                    <div class="container">
+                        <div class="row">
+                            <h2>Get in touch with Freyrus</h2>
+                            <ul class="working-list">
+                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Themeforest</span></li>
+                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Videohive</span></li>
+                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Codeanyone</span></li>
+                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Photodune</span></li>
+                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Themeforest</span></li>
+                            </ul>
                         </div>
-                    </footer>
-                    <!--footer ends-->
+                        <div class="row">
+                            <div class="col-lg-12 contact-text">
+                                <p>Call Us today! We might just be the perfect fit for you.</p>
+                                <p class="phone">+84 0199 855 8585   -   hello@freyrus.com</p>
+                            </div>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
