done page 'what we do'

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <ul class="list-project-min">
                            <li>
                                 <a href="#">
-                                  <h2>Millhaus</h2>
+                                  <span class="project_name"><h2>Millhaus</h2></span>
                                   <figure>
                                         <img class="preview" src="images/prj1.jpg" alt="Millhaus">
                                   </figure>
@@ -129,7 +129,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                  <h2>Millhaus</h2>
+                                   <span class="project_name"><h2>Millhaus</h2></span>
                                   <figure>
                                         <img class="preview" src="images/prj1.jpg" alt="Millhaus">
                                   </figure>
@@ -138,7 +138,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                  <h2>Millhaus</h2>
+                                   <span class="project_name"><h2>Millhaus</h2></span>
                                   <figure>
                                         <img class="preview" src="images/prj1.jpg" alt="Millhaus">
                                   </figure>
@@ -147,7 +147,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                  <h2>Millhaus</h2>
+                                   <span class="project_name"><h2>Millhaus</h2></span>
                                   <figure>
                                         <img class="preview" src="images/prj1.jpg" alt="Millhaus">
                                   </figure>
