done page 'we can help'

--- a/index.html
+++ b/index.html
@@ -94,20 +94,19 @@
                                 <p>We all know how difficult a web development project really is. In order to avoid scope creep, uncontrolled change requests and project growth, we recommend hiring a small team. Whether it's one developer or a mini team, we can provide the right solution for you.</p>
                             </div>
                         </div>
-                        <!-- /.row -->
-                        <div class="row">
-                            <ul class="product-list">
-                                <li><span class="html5">html5</span></li>
-                                <li><span class="jquery">jQuery</span></li>
-                                <li><span class="email">email temaplate</span></li>
-                                <li><span class="wp">wp</span></li>
-                                <li><span class="drupal">drupal</span></li>
-                                <li><span class="joomla">joomla</span></li>
-                                <li><span class="magento">magento</span></li>
-                                <li><span class="shopify">shopify</span></li>
-                            </ul>
-                        </div>
-                        <!-- /.row -->
+                    </div>
+                    <div class="list-icon-farmus_wapper">
+                        <ul class="list-icon-farmus_content">
+                            <li><span class="wrordpress">wrordpress</span></li>
+                            <li><span class="drupal">drupal</span></li>
+                            <li><span class="opencart">opencart</span></li>
+                            <li><span class="magento">magento cart</span></li>
+                            <li><span class="shopify">shopify</span></li>
+                            <li><span class="cs-cart">cs-cart</span></li>
+                            <li><span class="angularjs">angularjs</span></li>
+                            <li><span class="backbonejs">backbonejs</span></li>
+                            <li><span class="jquery">jquery</span></li>
+                        </ul>
                     </div>
                 </section>
                 <section class="section pages__what_we_do">
