done page 'get in touch'

--- a/index.html
+++ b/index.html
@@ -158,22 +158,29 @@
                 </section>
                 <section class="section pages__who_we_are">who we are</section>
                 <section class="section pages__get_in_touch">
-                    <div class="container">
-                        <div class="row">
-                            <h2>Get in touch with Freyrus</h2>
-                            <ul class="working-list">
-                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Themeforest</span></li>
-                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Videohive</span></li>
-                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Codeanyone</span></li>
-                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Photodune</span></li>
-                                <li><span><img src="images/working/videohive.png" alt="videohive.png" /> Themeforest</span></li>
-                            </ul>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12 contact-text">
-                                <p>Call Us today! We might just be the perfect fit for you.</p>
-                                <p class="phone">+84 0199 855 8585   -   hello@freyrus.com</p>
+                    <div class="pages__get_in_touch-top">
+                        <div class="container">
+                            <div class="row">
+                                <h2>Get in touch with Freyrus</h2>
+                                <ul class="working-list">
+                                    <li><span class="codeanyone">codeanyone</span></li>
+                                     <li><span class="themeforest">Themeforest</span></li>
+                                     <li><span class="graphicriver">Graphicriver</span></li>
+                                     <li><span class="github">github</span></li>
+                                     <li><span class="twitter">twitter</span></li>
+                                </ul>
                             </div>
+                            <div class="row">
+                                <div class="col-lg-12 contact-text">
+                                    <p>Call Us today! We might just be the perfect fit for you.</p>
+                                    <p class="phone">+84 0199 855 8585   -   hello@freyrus.com</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pages__get_in_touch-map">
+                        <div id="map">
+                            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:300px;width:1700px;"><div id="gmap_canvas" style="height:300px;width:1700px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.mapsembed.com/goertz-gutschein/" id="get-map-data">hingucker</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:34,center:new google.maps.LatLng(10.771299,106.653358),mapTypeId: google.maps.MapTypeId.TERRAIN};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(10.771299,106.653358)});infowindow = new google.maps.InfoWindow({content:"<b>Freyrus</b><br/>4 floor Lu gia Plaza, Lu gia street,ward 15, District 11, HoChiMinh City, VietNam<br/> " });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
                         </div>
                     </div>
                 </section>
