add content and project

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <div class="container">
                         <div class="row">
                             <h2>What Can We Do For You</h2>
+                            <span class="line">&nbsp</span>
                             <p>Mobile and e-commerce are more than a necessity, they're your life force, your heart. And although we are a full-service web development and design agency, our focus is allheart. Increase traffic and engagement and accelerate sales with Freyrus.</p>
                         </div>
                         <div class="row">
@@ -112,43 +113,44 @@
                 <section class="section pages__what_we_do">
                 	<div class="pages__what_we_do_header-title">
                 		<h2>WHAT WE DO</h2>
+                        <span class="line">&nbsp</span>
                 		<p>Let see what We have build, then make your ideas come true and hire we</p>
                 	</div>
                     <div class="pages__what_we_do_bottom-title"></div>
                     <div class="pages__what_we_do_content">
                         <ul class="list-project-min">
+                            <li>
+                                <a href="#">
+                                   <span class="project_name"><h2>G2000 fashion Vietnam</h2></span>
+                                  <figure>
+                                        <img class="preview" src="images/prj4.png" alt="G2000 fashion vietnam">
+                                  </figure>
+                                  <div class="readMore">View details</div>
+                                </a>
+                            </li>
                            <li>
                                 <a href="#">
-                                  <span class="project_name"><h2>Millhaus</h2></span>
+                                  <span class="project_name"><h2>Vietnam A to Z</h2></span>
                                   <figure>
-                                        <img class="preview" src="images/prj1.jpg" alt="Millhaus">
+                                        <img class="preview" src="images/prj2.jpg" alt="vietnamatoz">
                                   </figure>
                                   <div class="readMore">View details</div>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                   <span class="project_name"><h2>Millhaus</h2></span>
+                                   <span class="project_name"><h2>California fitness & yoga Centers</h2></span>
                                   <figure>
-                                        <img class="preview" src="images/prj1.jpg" alt="Millhaus">
+                                        <img class="preview" src="images/prj1.jpg" alt="california fitness & yoga centers">
                                   </figure>
                                   <div class="readMore">View details</div>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                   <span class="project_name"><h2>Millhaus</h2></span>
+                                   <span class="project_name"><h2>RFR Vietnam</h2></span>
                                   <figure>
-                                        <img class="preview" src="images/prj1.jpg" alt="Millhaus">
-                                  </figure>
-                                  <div class="readMore">View details</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                   <span class="project_name"><h2>Millhaus</h2></span>
-                                  <figure>
-                                        <img class="preview" src="images/prj1.jpg" alt="Millhaus">
+                                        <img class="preview" src="images/prj3.png" alt="rfr-vietnam">
                                   </figure>
                                   <div class="readMore">View details</div>
                                 </a>
@@ -156,12 +158,66 @@
                         </ul>
                     </div>
                 </section>
-                <section class="section pages__who_we_are">who we are</section>
+                <section class="section pages__who_we_are">
+                    <div class="container">
+                        <div class="row">
+                            <h2>Who We Are</h2>
+                            <span class="line">&nbsp</span>
+                        </div>
+                    </div>
+                    <div class="pages__who_we_are_wapper_content">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="hexagon">
+                                      <div class="hexagon-img">
+                                          <img src="images/tuyen.jpg" alt="Tuyến Vương">
+                                      </div>
+                                      <div class="hexagon-bg"></div>
+                                    </div>
+                                    <div class="team-details">
+                                        <h4> Tuyển Vương </h4>
+                                        <h6> Back-end Developer </h6>
+                                        <p> I'm a hard-core web developer who can build from a ground up any web framework. </p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="hexagon">
+                                      <div class="hexagon-img">
+                                          <img src="images/nguyenlong.png" alt="Nguyen Long">
+                                      </div>
+                                      <div class="hexagon-bg"></div>
+                                    </div>
+                                    <div class="team-details">
+                                        <h4> Nguyễn Long</h4>
+                                        <h6> Front-end Developer </h6>
+                                        <p>I’m a passionate, Full Stack Web Developer. I live for creating awesome user experiences on the web, designed and optimised for the workflow of the target audience.</p>
+                                    </div>
+                                </div>
+                                
+                                <div class="col-lg-4">
+                                    <div class="hexagon">
+                                      <div class="hexagon-img">
+                                          <img src="images/song.jpg" alt="Sông Phạm">
+                                      </div>
+                                      <div class="hexagon-bg"></div>
+                                    </div>
+                                    <div class="team-details">
+                                        <h4> Sông Phạm </h4>
+                                        <h6> Back-end Developer</h6>
+                                        <p>I'm a hard-core web developer who can build from a ground up any web framework.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <section class="section pages__get_in_touch">
                     <div class="pages__get_in_touch-top">
                         <div class="container">
                             <div class="row">
                                 <h2>Get in touch with Freyrus</h2>
+                                <span class="line">&nbsp</span>
                                 <ul class="working-list">
                                     <li><span class="codeanyone">codeanyone</span></li>
                                      <li><span class="themeforest">Themeforest</span></li>
