--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta http-equiv="content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Freyrus -</title>
+    <title>Freyrus - Make your ideals come true</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -27,6 +27,7 @@
 
 <body class="main">
     <!--wrapper starts-->
+    <div class="wrapper-plus"></div>
     <div class="wrapper">
         <!--header starts-->
         <header id="wrapper-header-top">
@@ -34,7 +35,7 @@
                 <div class="container">
                     <span class="top-nav__contact-left"></span>
                     <div class="top-nav__contact">
-                        Call +84 - 0199 855 8585 &nbsp &nbsp&nbsp <a href="mailto:hello@freyrus.com">hello@freyrus.com</a>
+                        Call +84 - 976 825 011 &nbsp &nbsp&nbsp <a href="mailto:hello@freyrus.com">hello@freyrus.com</a>
                     </div>
                     <span class="top-nav__contact-right"></span>
                 </div>
@@ -98,15 +99,15 @@
                     </div>
                     <div class="list-icon-farmus_wapper">
                         <ul class="list-icon-farmus_content">
-                            <li><span class="wrordpress">wrordpress</span></li>
-                            <li><span class="drupal">drupal</span></li>
-                            <li><span class="opencart">opencart</span></li>
-                            <li><span class="magento">magento cart</span></li>
-                            <li><span class="shopify">shopify</span></li>
-                            <li><span class="cs-cart">cs-cart</span></li>
-                            <li><span class="angularjs">angularjs</span></li>
-                            <li><span class="backbonejs">backbonejs</span></li>
-                            <li><span class="jquery">jquery</span></li>
+                            <li><span class="wrordpress"><a href="http://wordpress.org/" target="_blank">wrordpress</a></span></li>
+                            <li><span class="drupal"><a href="http://drupal.org/" target="_blank">drupal</a></span></li>
+                            <li><span class="opencart"><a href="http://www.opencart.com/" target="_blank">opencart</a></span></li>
+                            <li><span class="magento"><a href="http://magento.com/" target="_blank">magento cart</a></span></li>
+                            <li><span class="shopify"><a href="http://www.shopify.com" target="_blank">shopify</a></span></li>
+                            <li><span class="cs-cart"><a href="http://www.cs-cart.com/" target="_blank">cs-cart</a></span></li>
+                            <li><span class="angularjs"><a href="https://angularjs.org/" target="_blank">angularjs</a></span></li>
+                            <li><span class="backbonejs"><a href="http://backbonejs.org/" target="_blank">backbonejs</a></span></li>
+                            <li><span class="jquery"><a href="http://jquery.com/" target="_blank">jquery</a></span></li>
                         </ul>
                     </div>
                 </section>
@@ -219,11 +220,11 @@
                                 <h2>Get in touch with Freyrus</h2>
                                 <span class="line">&nbsp</span>
                                 <ul class="working-list">
-                                    <li><span class="codeanyone">codeanyone</span></li>
-                                     <li><span class="themeforest">Themeforest</span></li>
-                                     <li><span class="graphicriver">Graphicriver</span></li>
-                                     <li><span class="github">github</span></li>
-                                     <li><span class="twitter">twitter</span></li>
+                                    <li><span class="codeanyone"><a href="http://codecanyon.net/" target="_blank">codeanyone</a></span></li>
+                                     <li><span class="themeforest"><a href="themeforest.net" target="_blank">Themeforest</a></span></li>
+                                     <li><span class="graphicriver"><a href="http://graphicriver.net/" target="_blank">Graphicriver</a></span></li>
+                                     <li><span class="github"><a href="https://github.com/freyrus" target="_blank">github freyrus</a></span></li>
+                                     <li><span class="twitter"><a href="https://twitter.com/" target="_blank">twitter</a></span></li>
                                 </ul>
                             </div>
                             <div class="row">
@@ -245,7 +246,7 @@
         <!--main ends-->
     </div>
     <!--wrapper ends-->
-    <a href="" title="Go to Top" class="back-to-top">To Top ↑</a>
+    <div class="back-to-top"><span class="glyphicon glyphicon-chevron-up"></span></div>
     <!--Java Scripts-->
     <script type="text/javascript" src="build/js/freyrus.min.js"></script>
     <!--Java Scripts ends-->
