--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <span class="top-nav__contact-left"></span>
                     <div class="top-nav__contact">
-                        Call +84 - 976 825 011 &nbsp &nbsp&nbsp <a href="mailto:hello@freyrus.com">hello@freyrus.com</a>
+                        Call us +84 - 976 825 011 &nbsp &nbsp&nbsp <a href="mailto:hello@freyrus.com">hello@freyrus.com</a>
                     </div>
                     <span class="top-nav__contact-right"></span>
                 </div>
@@ -77,19 +77,19 @@
                             <p>Mobile and e-commerce are more than a necessity, they're your life force, your heart. And although we are a full-service web development and design agency, our focus is allheart. Increase traffic and engagement and accelerate sales with Freyrus.</p>
                         </div>
                         <div class="row">
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 col-md-4">
                                 <a href="#" class="main-help e-commerce">
                                     <h3>E-Commerce</h3>
                                 </a>
                                 <p>We all know and love the quote from Field of Dreams: "Build it and they will come." But to believe it is true is simply impossible. E-Commerce sites sell stuff. But they won’t sell themselves. An e-commerce site is your business’ foundation. Don’t let your customers down with a complicated, hard-to-use site that doesn’t look appealing. Build a site that reflects your business goals and keeps customers happy.</p>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 col-md-4">
                                 <a href="#" class="main-help mobile-web">
                                     <h3>Mobile Web</h3>
                                 </a>
                                 <p>Mobile web browsing is not just a trend; it has actually become a necessity. With the convenience of surfing the web from a mobile device, it is becoming a necessity to have a mobile site for your business. So if you haven’t yet set up your own mobile site, we will create a mobile version of your site for your iPhone or Droid, the 2 most commonly used platforms - sorry Blackberry.</p>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-4 col-md-4">
                                 <a href="#" class="main-help hire-a-team">
                                     <h3>Hire a Team</h3>
                                 </a>
@@ -169,7 +169,7 @@
                     <div class="pages__who_we_are_wapper_content">
                         <div class="container">
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-4">
                                     <div class="hexagon">
                                       <div class="hexagon-img">
                                           <img src="images/tuyen.jpg" alt="Tuyến Vương">
@@ -182,7 +182,7 @@
                                         <p> I'm a hard-core web developer who can build from a ground up any web framework. </p>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-4">
                                     <div class="hexagon">
                                       <div class="hexagon-img">
                                           <img src="images/nguyenlong.png" alt="Nguyen Long">
@@ -196,7 +196,7 @@
                                     </div>
                                 </div>
                                 
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 col-md-4">
                                     <div class="hexagon">
                                       <div class="hexagon-img">
                                           <img src="images/song.jpg" alt="Sông Phạm">
