--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                                       <div class="hexagon-bg"></div>
                                     </div>
                                     <div class="team-details">
-                                        <h4> Tuyển Vương </h4>
+                                        <h4> Tuyến Vương </h4>
                                         <h6> Back-end Developer </h6>
-                                        <p> I'm a hard-core web developer who can build from a ground up any web framework. </p>
+                                        <p>My expertise and interest lies in web technologies, including PHP&MYSQL, HTML/5, CSS, JavaScript (as well as frameworks like jQuery, MooTools, and Sencha).</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-4">
